@@ -4475,6 +4475,7 @@ extern bool reregister_specialization		(tree, tree, tree);
 extern tree fold_non_dependent_expr		(tree);
 extern bool explicit_class_specialization_p     (tree);
 extern struct tinst_level *outermost_tinst_level(void);
+extern bool is_parameter_of_template_p		(tree, tree);
 
 /* in repo.c */
 extern void init_repo				(void);
