@@ -1,3 +1,13 @@
+2009-01-12  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/36019
+	* g++.dg/lookup/hidden-class12.C: New test.
+	* g++.dg/lookup/hidden-class13.C: New test.
+	* g++.dg/lookup/hidden-class14.C: New test.
+	* g++.dg/lookup/hidden-class15.C: New test.
+	* g++.dg/lookup/hidden-class16.C: New test.
+	* gcc/testsuite/g++.old-deja/g++.benjamin/tem03.C: Adjust testcase.
+
 2009-01-11  Matthias Klose  <doko@ubuntu.com>
 
         PR middle-end/38616
